# gs_usb_rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
examples/: 1_device_initialization.rs  2_channel_start_sequence.rs  3_test_all_bitrates.rs  4_test_get_state.rs  gs_usb_example.rs
src/: constants.rs  device.rs  error.rs  frame.rs  lib.rs  structures.rs
